[tool.poetry]
name = "vrsatile"
version = "0.1.0"
description = "Experimental implmentation of GA4GH's vrsatile tool standard in LinkML"
authors = ["vrsatile developers"]
license = "MIT"
include = ["README.md", "src/linkml", "project"]

[tool.poetry.dependencies]
python = "^3.9"
linkml-runtime = "^1.1.24"
mkdocs = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
