[tool.poetry]
name = "vrsatile"
version = "0.1.0"
description = "Experimental implmentation of GA4GH's vrsatile tool standard in LinkML"
authors = ["vrsatile developers"]
license = "MIT"
include = ["README.md", "src/linkml", "project"]

[tool.poetry.dependencies]
python = "^3.8"
linkml = "^1.2.4"
mkdocs-mermaid2-plugin = "^0.6.0"
mkdocs = "^1.3.0"

[tool.poetry.dev-dependencies]
linkml = "^1.2.4"
pytest = "^5.2"
mkdocs = "^1.3.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"